[package]
name = "lilqueue"
version = "0.1.1"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = "0.8"
sea-orm = { version = "1.1.19", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[dev-dependencies]
tempfile = "3.14"
tower = { version = "0.5", features = ["util"] }
